fix own bug [#35451] Extrude -> Grab -> Cancel -> Crash